--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--- Form Templates  --->
 
     <!-- recipe-form-template -->
-    <script id="recipe-form-template" type="text/x-handlebars-template">
+    <script id="recipe-form-templat" type="text/x-handlebars-template">
       <form onsubmit="createRecipe();return false;">
         Name: <input name="name" type="text"><br>
         Description: <input name="description" type="text"><br>
