automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- recipe-template  -->
 
-    <script type="text/x-handlebars-template">
+    <script id='recipe-template' type="text/x-handlebars-template">
       <h3>{{name}}</h3>
       <a href="{{url}}">Edit Recipe</a><br>
       {{> recipeDetailsPartial}}
