automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <p>{{description}}</p>
       <ul>
         {{#each ingredients}}
-          {{displayIngredient}}
+          {{displayIngredient this}}
         {{/each}}
       </ul>
     </script>
