--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <form onsubmit="createRecipe();return false;">
         Name: <input name="name" type="text"><br>
         Description: <input name="description" type="text"><br>
-        Ingredient 1: <input name="ingredients" type="text"><br>
-        Ingredient 2: <input name="ingredients" type="text"><br>
-        Ingredient 3: <input name="ingredients" type="text"><br>
-        Ingredient 4: <input name="ingredients" type="text"><br>
-        Ingredient 5: <input name="ingredients" type="text"><br>
+        Ingredient 1: <input name="ingredientsList" type="text"><br>
+        Ingredient 2: <input name="ingredientsList" type="text"><br>
+        Ingredient 3: <input name="ingredientsList" type="text"><br>
+        Ingredient 4: <input name="ingredientsList" type="text"><br>
+        Ingredient 5: <input name="ingredientsList" type="text"><br>
         <input type="submit">
       </form>
     </script>
