--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
 
     <!--- Form Templates  --->
 
+    <!-- recipe-form-template  -->
+    <script id='recipe-form-template' type="text/x-handlebars-template">
+      <form id='recipe-form' onsubmit="{{submitAction}};return false">
+        {{> recipeFormPartial}}
+      </form>
+    </script>
+
     <!-- recipe-form-template -->
-    <script id="recipe-form-template" type="text/x-handlebars-template">
-      <form onsubmit="createRecipe();return false;">
+    <script id="recipe-form-partial" type="text/x-handlebars-template">
+
         Name: <input name="name" type="text"><br>
         Description: <input name="description" type="text"><br>
         Ingredient 1: <input name="ingredientsList" type="text"><br>
@@ -25,7 +32,7 @@
         Ingredient 4: <input name="ingredientsList" type="text"><br>
         Ingredient 5: <input name="ingredientsList" type="text"><br>
         <input type="submit">
-      </form>
+
     </script>
 
     <!-- recipe-template  -->
