automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <script id='recipe-template' type="text/x-handlebars-template">
       <h3>{{name}}</h3>
-      <a onclick='displayEditForm();return false;'>Edit Recipe</a><br>
+      <a href="#" onclick='displayEditForm();return false;'>Edit Recipe</a><br>
       {{> recipeDetailsPartial}}
     </script>
 
