automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- recipe-form-template  -->
     <script id='recipe-form-template' type="text/x-handlebars-template">
-      <form id='recipe-form' onsubmit="{{submitAction}};return false">
+      <form id='recipe-form' onsubmit="{{submitAction}};return false;">
         {{> recipeFormPartial}}
       </form>
     </script>
